third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v1/direct_visibility.exp
module 0x815::a {
    friend fun f() {
        ()
    }
}

module 0x815::b {
    friend fun f() {
        ()
    }
}

module 0x815::c {
    use 0x815::a;
    use 0x815::b;
    friend fun f() {
        a::f();
        b::f();
    }
}

--- unable to recompile the decompiled code:
exiting with env checking errors
error: function `0x815::a::f` cannot be called from function `0x815::c::f` because module `0x815::c` is not a `friend` of `0x815::a`
   ┌─ direct_visibility.move:2:16
   │
 2 │     friend fun f() {
   │                ^ callee
   ·
17 │         a::f();
   │         ------ called here

error: function `0x815::b::f` cannot be called from function `0x815::c::f` because module `0x815::c` is not a `friend` of `0x815::b`
   ┌─ direct_visibility.move:8:16
   │
 8 │     friend fun f() {
   │                ^ callee
   ·
18 │         b::f();
   │         ------ called here
